Add workaround to run MapConvert on java 17+